packages/skin/src/sass/item-tile/item-tile.scss
.item-tile {
    display: grid;
    gap: var(--spacing-200);
    grid-area: body;
    grid-template-areas:
        "header"
        "body";
    grid-template-rows: auto 1fr;
}

.item-tile--list-view {
    display: flex;
    flex-direction: row;
    gap: var(--spacing-100);
}

.item-tile__header {
    grid-area: header;
}

.item-tile__header .file-preview-card__body a {
    display: block;
    width: 100%;
}

.item-tile__header .file-preview-card__body a:focus-visible {
    border-radius: var(
        --item-tile-media-border-radius,
        var(--border-radius-100)
    );
    outline-offset: 3px;
}

.item-tile__body {
    display: grid;
    grid-area: body;
    grid-template-areas:
        "section-primary"
        "section-secondary"
        "section-tertiary";
    grid-template-rows: 25px 0.75fr 1fr;
}

.item-tile--list-view .item-tile__header {
    max-width: 200px;
}

.item-tile--list-view .item-tile__body {
    display: flex;
    flex-direction: column;
}

.item-tile__section-primary {
    display: inline-block;
    grid-area: section-primary;
    margin-block-end: var(--spacing-50);
}

.item-tile__section-primary .signal {
    margin: 0;
}

.item-tile__section-secondary {
    grid-area: section-secondary;
}

.item-tile__section-tertiary {
    grid-area: section-tertiary;
}

/* Each of the attributes is expected to be in its own <p> */
.item-tile__section-tertiary p {
    margin-block-end: 0.2143em; /* 3px / 14px (base font) */
    margin-block-start: 0;
}

.item-tile__section-tertiary a {
    color: var(--color-foreground-link-primary);
    text-decoration: none;
}

.item-tile__title {
    -webkit-box-orient: vertical;
    color: var(--color-foreground-link-primary);
    display: -webkit-box;
    -webkit-line-clamp: 3;
    overflow: hidden;
    text-decoration: none;
}

.item-tile__title:hover {
    color: var(--color-foreground-link-primary);
    text-decoration: underline;
}

.item-tile__title:visited {
    color: var(--color-foreground-link-visited);
}

.item-tile__subtitle {
    color: var(--color-foreground-secondary);
}

